--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | 3-column preview card component</title>
@@ -12,8 +12,9 @@
 <body>
   <main class="container">
     <section class="content">
-      <div class="first-content">
-        <div class="context">
+      <div class="context">
+        <div class="text-content">
+          <div class="col">
           <div class="svg">
             <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
               <g fill="none" fill-rule="evenodd">
@@ -28,11 +29,13 @@
               <p class="first-para">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
               or on your next road trip.
               </p>
-              <button class="btn">learn more</button>
+            </div>
+              <button class="btn col1">learn more</button>
         </div>
       </div>
-      <div class="second-content">
-        <div class="context">
+      <div class="context">
+        <div class="text-content">
+        <div class="col">
           <div class="svg">
             <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
               <g fill="none" fill-rule="evenodd">
@@ -47,11 +50,13 @@
             <p class="second-para">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
             and off-road adventures.
             </p>
-            <button class="btn">learn more</button>
+          </div>
+            <button class="btn col2">learn more</button>
         </div>
       </div>
-      <div class="third-content">
-        <div class="context">
+      <div class="context">
+        <div class="text-content">
+        <div class="col">
           <div class="svg">
             <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
               <g fill="none" fill-rule="evenodd">
@@ -66,7 +71,8 @@
             <p class="third-para">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
             rental and arrive in style.
             </p>
-            <button class="btn">learn more</button>
+          </div>
+            <button class="btn col3">learn more</button>
         </div>
       </div>
 <!--   
